--- a/MoYeoRunToy/MoYeoRunToy/StoryBoard/SignUpBasicInformation.storyboard
+++ b/MoYeoRunToy/MoYeoRunToy/StoryBoard/SignUpBasicInformation.storyboard
@@ -38,6 +38,9 @@
                                             <preferredSymbolConfiguration key="preferredSymbolConfigurationForImage" configurationType="pointSize" pointSize="12"/>
                                             <color key="baseForegroundColor" red="0.66666666669999997" green="0.66666666669999997" blue="0.66666666669999997" alpha="1" colorSpace="calibratedRGB"/>
                                         </buttonConfiguration>
+                                        <connections>
+                                            <action selector="onTapCameraSymbolButton:" destination="Y6W-OH-hqX" eventType="touchUpInside" id="teN-tb-YH4"/>
+                                        </connections>
                                     </button>
                                 </subviews>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor"/>
