--- a/MoYeoRunToy/MoYeoRunToy/StoryBoard/SignUpBasicInformation.storyboard
+++ b/MoYeoRunToy/MoYeoRunToy/StoryBoard/SignUpBasicInformation.storyboard
@@ -53,10 +53,10 @@
                                 </constraints>
                             </view>
                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="10" translatesAutoresizingMaskIntoConstraints="NO" id="CQs-iv-QAq">
-                                <rect key="frame" x="18" y="288" width="378" height="170"/>
+                                <rect key="frame" x="18" y="288" width="378" height="249"/>
                                 <subviews>
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="O64-HN-bj4">
-                                        <rect key="frame" x="0.0" y="0.0" width="378" height="80"/>
+                                        <rect key="frame" x="0.0" y="0.0" width="378" height="78"/>
                                         <subviews>
                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="이름" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="3Ab-rp-sYQ">
                                                 <rect key="frame" x="0.0" y="0.0" width="28" height="25"/>
@@ -68,9 +68,9 @@
                                                 <nil key="highlightedColor"/>
                                             </label>
                                             <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="kT2-Sw-RJq">
-                                                <rect key="frame" x="0.0" y="30" width="378" height="50"/>
+                                                <rect key="frame" x="0.0" y="30" width="378" height="48"/>
                                                 <constraints>
-                                                    <constraint firstAttribute="height" constant="50" id="fJJ-xG-g9f"/>
+                                                    <constraint firstAttribute="height" constant="48" id="fJJ-xG-g9f"/>
                                                 </constraints>
                                                 <fontDescription key="fontDescription" type="system" pointSize="18"/>
                                                 <textInputTraits key="textInputTraits"/>
@@ -87,7 +87,7 @@
                                         </constraints>
                                     </view>
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="jjr-1v-u1A">
-                                        <rect key="frame" x="0.0" y="90" width="378" height="80"/>
+                                        <rect key="frame" x="0.0" y="88" width="378" height="78"/>
                                         <subviews>
                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="닉네임" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="eU9-3Q-K14">
                                                 <rect key="frame" x="0.0" y="0.0" width="42" height="25"/>
@@ -99,9 +99,9 @@
                                                 <nil key="highlightedColor"/>
                                             </label>
                                             <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="y4b-fd-4SI">
-                                                <rect key="frame" x="0.0" y="30" width="378" height="50"/>
+                                                <rect key="frame" x="0.0" y="30" width="378" height="48"/>
                                                 <constraints>
-                                                    <constraint firstAttribute="height" constant="50" id="5wp-QQ-gQ6"/>
+                                                    <constraint firstAttribute="height" constant="48" id="5wp-QQ-gQ6"/>
                                                 </constraints>
                                                 <fontDescription key="fontDescription" type="system" pointSize="18"/>
                                                 <textInputTraits key="textInputTraits"/>
@@ -115,6 +115,64 @@
                                             <constraint firstAttribute="trailing" secondItem="y4b-fd-4SI" secondAttribute="trailing" id="cjb-Z4-MWz"/>
                                             <constraint firstItem="eU9-3Q-K14" firstAttribute="leading" secondItem="jjr-1v-u1A" secondAttribute="leading" id="d3B-mf-vpw"/>
                                             <constraint firstItem="y4b-fd-4SI" firstAttribute="top" secondItem="eU9-3Q-K14" secondAttribute="bottom" constant="5" id="toH-s2-9Oy"/>
+                                        </constraints>
+                                    </view>
+                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="ymt-yW-swY">
+                                        <rect key="frame" x="0.0" y="176" width="378" height="73"/>
+                                        <subviews>
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="성별" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="7dr-HV-lXW">
+                                                <rect key="frame" x="0.0" y="0.0" width="28" height="25"/>
+                                                <constraints>
+                                                    <constraint firstAttribute="height" constant="25" id="Qvb-Yw-8ul"/>
+                                                </constraints>
+                                                <fontDescription key="fontDescription" type="system" pointSize="16"/>
+                                                <nil key="textColor"/>
+                                                <nil key="highlightedColor"/>
+                                            </label>
+                                            <stackView opaque="NO" contentMode="scaleToFill" spacing="9" translatesAutoresizingMaskIntoConstraints="NO" id="fqJ-1v-JQX">
+                                                <rect key="frame" x="0.0" y="25" width="378" height="48"/>
+                                                <subviews>
+                                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="GbU-V7-DPX">
+                                                        <rect key="frame" x="0.0" y="0.0" width="184.5" height="48"/>
+                                                        <state key="normal" title="Button"/>
+                                                        <buttonConfiguration key="configuration" style="plain" image="성별남" title=""/>
+                                                        <userDefinedRuntimeAttributes>
+                                                            <userDefinedRuntimeAttribute type="color" keyPath="borderColor">
+                                                                <color key="value" white="0.66666666666666663" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                                            </userDefinedRuntimeAttribute>
+                                                            <userDefinedRuntimeAttribute type="number" keyPath="borderWidth">
+                                                                <real key="value" value="1"/>
+                                                            </userDefinedRuntimeAttribute>
+                                                        </userDefinedRuntimeAttributes>
+                                                    </button>
+                                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="tL6-s0-ySn">
+                                                        <rect key="frame" x="193.5" y="0.0" width="184.5" height="48"/>
+                                                        <state key="normal" title="Button"/>
+                                                        <buttonConfiguration key="configuration" style="plain" image="성별여" title=""/>
+                                                        <userDefinedRuntimeAttributes>
+                                                            <userDefinedRuntimeAttribute type="color" keyPath="borderColor">
+                                                                <color key="value" white="0.66666666666666663" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                                            </userDefinedRuntimeAttribute>
+                                                            <userDefinedRuntimeAttribute type="number" keyPath="borderWidth">
+                                                                <real key="value" value="1"/>
+                                                            </userDefinedRuntimeAttribute>
+                                                        </userDefinedRuntimeAttributes>
+                                                    </button>
+                                                </subviews>
+                                                <constraints>
+                                                    <constraint firstItem="GbU-V7-DPX" firstAttribute="width" secondItem="tL6-s0-ySn" secondAttribute="width" id="PhY-7c-utQ"/>
+                                                    <constraint firstAttribute="height" constant="48" id="wyI-jG-8Gj"/>
+                                                </constraints>
+                                            </stackView>
+                                        </subviews>
+                                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                        <constraints>
+                                            <constraint firstItem="fqJ-1v-JQX" firstAttribute="leading" secondItem="ymt-yW-swY" secondAttribute="leading" id="06t-vh-Edk"/>
+                                            <constraint firstAttribute="trailing" secondItem="fqJ-1v-JQX" secondAttribute="trailing" id="4Cu-BN-wil"/>
+                                            <constraint firstItem="7dr-HV-lXW" firstAttribute="leading" secondItem="ymt-yW-swY" secondAttribute="leading" id="MjF-pb-i0V"/>
+                                            <constraint firstAttribute="bottom" secondItem="fqJ-1v-JQX" secondAttribute="bottom" id="Ooa-P2-pvF"/>
+                                            <constraint firstItem="7dr-HV-lXW" firstAttribute="top" secondItem="ymt-yW-swY" secondAttribute="top" id="cde-K7-Fam"/>
+                                            <constraint firstItem="fqJ-1v-JQX" firstAttribute="top" secondItem="7dr-HV-lXW" secondAttribute="bottom" id="lBI-Bw-KsC"/>
                                         </constraints>
                                     </view>
                                 </subviews>
@@ -193,6 +251,8 @@
         <image name="Rectangle 142.png" width="123" height="123"/>
         <image name="camera.circle.fill" catalog="system" width="128" height="121"/>
         <image name="xmark" catalog="system" width="128" height="113"/>
+        <image name="성별남" width="20" height="33"/>
+        <image name="성별여" width="32" height="31"/>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
         </systemColor>
