--- a/MoYeoRunToy/MoYeoRunToy/StoryBoard/SignUpBasicInformation.storyboard
+++ b/MoYeoRunToy/MoYeoRunToy/StoryBoard/SignUpBasicInformation.storyboard
@@ -53,7 +53,7 @@
                                 </constraints>
                             </view>
                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="10" translatesAutoresizingMaskIntoConstraints="NO" id="CQs-iv-QAq">
-                                <rect key="frame" x="24" y="288" width="366" height="249"/>
+                                <rect key="frame" x="24" y="288" width="366" height="254"/>
                                 <subviews>
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="O64-HN-bj4">
                                         <rect key="frame" x="0.0" y="0.0" width="366" height="78"/>
@@ -118,7 +118,7 @@
                                         </constraints>
                                     </view>
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="ymt-yW-swY">
-                                        <rect key="frame" x="0.0" y="176" width="366" height="73"/>
+                                        <rect key="frame" x="0.0" y="176" width="366" height="78"/>
                                         <subviews>
                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="성별" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="7dr-HV-lXW">
                                                 <rect key="frame" x="0.0" y="0.0" width="28" height="25"/>
@@ -130,7 +130,7 @@
                                                 <nil key="highlightedColor"/>
                                             </label>
                                             <stackView opaque="NO" contentMode="scaleToFill" spacing="9" translatesAutoresizingMaskIntoConstraints="NO" id="fqJ-1v-JQX">
-                                                <rect key="frame" x="0.0" y="25" width="366" height="48"/>
+                                                <rect key="frame" x="0.0" y="30" width="366" height="48"/>
                                                 <subviews>
                                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="GbU-V7-DPX">
                                                         <rect key="frame" x="0.0" y="0.0" width="178.5" height="48"/>
@@ -178,7 +178,7 @@
                                             <constraint firstItem="7dr-HV-lXW" firstAttribute="leading" secondItem="ymt-yW-swY" secondAttribute="leading" id="MjF-pb-i0V"/>
                                             <constraint firstAttribute="bottom" secondItem="fqJ-1v-JQX" secondAttribute="bottom" id="Ooa-P2-pvF"/>
                                             <constraint firstItem="7dr-HV-lXW" firstAttribute="top" secondItem="ymt-yW-swY" secondAttribute="top" id="cde-K7-Fam"/>
-                                            <constraint firstItem="fqJ-1v-JQX" firstAttribute="top" secondItem="7dr-HV-lXW" secondAttribute="bottom" id="lBI-Bw-KsC"/>
+                                            <constraint firstItem="fqJ-1v-JQX" firstAttribute="top" secondItem="7dr-HV-lXW" secondAttribute="bottom" constant="5" id="lBI-Bw-KsC"/>
                                         </constraints>
                                     </view>
                                 </subviews>
